--- a/movies.html
+++ b/movies.html
@@ -13,7 +13,7 @@
 	</header>
 
 
-	<p><a href="https://www.imdb.com/title/tt0076759/?ref_=nv_sr_7"><img src="hope.jpg" class="images_film"></a></p>
+	<a href="https://www.imdb.com/title/tt0076759/?ref_=nv_sr_7"><img src="hope.jpg" class="images_film"></a>
 	<p class="paragraph"><strong>Star Wars: A New Hope</strong><br><br>
 	Genre: Action, Adventure, Fantasy <br><br>
 	Release Date: 25 May 1977. <br><br>
